# rust_win_xp_gui

./: .gitignore  Cargo.toml  build.ps1  readme.md  run.ps1
examples/: simple.rs
src/: base_window.rs  lib.rs
